--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Эффект проектора -->
     <div class="projector-effect"></div>
     
-    <!-- Царапины на плёнке -->
+    <!-- Царапины на плёнки -->
     <div class="film-scratch"></div>
 
     <!-- Навигация -->
@@ -22,6 +22,8 @@
         <button class="nav-btn" onclick="scrollToYear(2021)">2021</button>
         <button class="nav-btn" onclick="scrollToYear(2022)">2022</button>
         <button class="nav-btn" onclick="scrollToYear(2023)">2023</button>
+        <button class="nav-btn" onclick="scrollToYear(2024)">2024</button>
+        <button class="nav-btn" onclick="scrollToYear(2025)">2025</button>
     </div>
 
     <!-- Контейнер плёнки -->
@@ -41,6 +43,7 @@
         </div>
     </div>
 
+    <script src="data.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
