--- a/index.html
+++ b/index.html
@@ -3,42 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bendy Chronicles RU - Календарь событий</title>
+    <title>Bendy Chronicles - Календарь событий</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Creepster&family=Special+Elite&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="ink-effect"></div>
     <div class="container">
         <header>
-            <div class="logo">
-                <h1>Bendy Chronicles</h1>
-                <div class="subtitle">Russian Community</div>
-            </div>
+            <h1>Bendy Chronicles</h1>
             <div class="filters">
                 <button class="filter-btn active" data-filter="all">Все события</button>
-                <button class="filter-btn" data-filter="game">🎮 Игры</button>
-                <button class="filter-btn" data-filter="trailer">🎬 Трейлеры</button>
-                <button class="filter-btn" data-filter="announcement">📢 Анонсы</button>
-                <button class="filter-btn" data-filter="future">🔮 Будущие</button>
-                <button class="filter-btn" id="compactMode">🎞️ Только с событиями</button>
+                <button class="filter-btn" data-filter="game">Игры</button>
+                <button class="filter-btn" data-filter="trailer">Трейлеры</button>
+                <button class="filter-btn" data-filter="announcement">Анонсы</button>
+                <button class="filter-btn" id="compactMode">Только с событиями</button>
             </div>
         </header>
 
         <main>
             <div class="calendar-container">
                 <div class="film-strip">
-                    <div class="film-perforations left"></div>
                     <button class="nav-btn prev">‹</button>
                     <div class="months-track" id="monthsTrack"></div>
                     <button class="nav-btn next">›</button>
-                    <div class="film-perforations right"></div>
                 </div>
             </div>
 
-            <div class="date-selector">
+            <div class="controls">
                 <input type="month" id="monthInput" min="2017-01" max="2025-12">
-                <button id="goToDate">Перейти к дате</button>
+                <button id="goToDate">Перейти</button>
                 <button id="todayBtn">Сегодня</button>
             </div>
         </main>
