--- a/index.html
+++ b/index.html
@@ -1,338 +1,18 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <title>Bendy Chronicles RU — Календарь событий</title>
+    <link rel="stylesheet" href="styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bendy Timeline</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            background: #1a1a1a;
-            color: #fff;
-            font-family: 'Courier New', monospace;
-            overflow-x: hidden;
-        }
-
-        .container {
-            max-width: 100%;
-            padding: 20px;
-        }
-
-        /* Панель управления */
-        .controls {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            margin-bottom: 20px;
-            flex-wrap: wrap;
-            gap: 15px;
-        }
-
-        .filters {
-            display: flex;
-            gap: 10px;
-            flex-wrap: wrap;
-        }
-
-        .filter-btn {
-            background: #333;
-            border: 1px solid #555;
-            color: #ccc;
-            padding: 8px 15px;
-            border-radius: 3px;
-            cursor: pointer;
-            transition: all 0.3s;
-            font-family: 'Courier New', monospace;
-        }
-
-        .filter-btn.active {
-            background: #ffd700;
-            color: #000;
-            border-color: #ffd700;
-        }
-
-        .filter-btn:hover {
-            background: #444;
-        }
-
-        .search input {
-            background: #2a2a2a;
-            border: 1px solid #555;
-            color: #fff;
-            padding: 8px 12px;
-            border-radius: 3px;
-            font-family: 'Courier New', monospace;
-            min-width: 200px;
-        }
-
-        /* Киноплёнка */
-        .film-container {
-            background: #1a1a1a;
-            padding: 10px 0;
-            position: relative;
-            margin-bottom: 30px;
-        }
-
-        .film-perforation-top,
-        .film-perforation-bottom {
-            height: 12px;
-            background: 
-                repeating-linear-gradient(
-                    to right,
-                    transparent 0px,
-                    transparent 15px,
-                    #ffd700 15px,
-                    #ffd700 19px
-                );
-            margin: 5px 0;
-        }
-
-        .film-strip {
-            display: flex;
-            gap: 8px;
-            padding: 0 20px;
-            min-width: max-content;
-            cursor: grab;
-            transition: transform 0.1s;
-            position: relative;
-            overflow-x: auto;
-        }
-
-        .film-strip:active {
-            cursor: grabbing;
-        }
-
-        /* Кадр плёнки */
-        .film-frame {
-            background: #2a2a2a;
-            border: 2px solid #444;
-            border-radius: 4px;
-            padding: 12px;
-            min-width: 180px;
-            position: relative;
-            box-shadow: 0 2px 6px rgba(0,0,0,0.3);
-            flex-shrink: 0;
-        }
-
-        .frame-header {
-            text-align: center;
-            border-bottom: 1px solid #444;
-            padding-bottom: 6px;
-            margin-bottom: 8px;
-        }
-
-        .month {
-            font-weight: bold;
-            color: #ffd700;
-            font-size: 13px;
-            text-transform: uppercase;
-        }
-
-        .year {
-            color: #888;
-            font-size: 11px;
-        }
-
-        /* Дни с событиями */
-        .event-day {
-            display: flex;
-            align-items: center;
-            gap: 6px;
-            padding: 4px;
-            margin: 2px 0;
-            border-radius: 2px;
-            cursor: pointer;
-            position: relative;
-        }
-
-        .event-day.has-event {
-            background: rgba(255, 215, 0, 0.1);
-            border-left: 2px solid #ffd700;
-        }
-
-        .event-day:hover {
-            background: rgba(255, 215, 0, 0.2);
-        }
-
-        .day-number {
-            font-weight: bold;
-            color: #fff;
-            min-width: 18px;
-            font-size: 12px;
-        }
-
-        .event-marker {
-            font-size: 11px;
-        }
-
-        .event-preview {
-            font-size: 10px;
-            color: #ccc;
-            white-space: nowrap;
-            overflow: hidden;
-            text-overflow: ellipsis;
-            flex: 1;
-        }
-
-        /* Всплывающее окно */
-        .event-tooltip {
-            position: absolute;
-            background: #333;
-            border: 1px solid #ffd700;
-            border-radius: 4px;
-            padding: 10px;
-            z-index: 1000;
-            min-width: 200px;
-            box-shadow: 0 4px 12px rgba(0,0,0,0.5);
-            top: 100%;
-            left: 0;
-            margin-top: 5px;
-        }
-
-        .event-tooltip h4 {
-            color: #ffd700;
-            margin-bottom: 5px;
-            font-size: 12px;
-        }
-
-        .event-tooltip p {
-            font-size: 11px;
-            color: #ccc;
-            margin-bottom: 8px;
-        }
-
-        .pin-btn {
-            background: #ffd700;
-            color: #000;
-            border: none;
-            padding: 4px 8px;
-            border-radius: 2px;
-            cursor: pointer;
-            font-size: 10px;
-            font-family: 'Courier New', monospace;
-        }
-
-        .pin-btn:hover {
-            background: #ffed4a;
-        }
-
-        /* Закрепленные события */
-        .pinned-events {
-            background: #2a2a2a;
-            border: 1px solid #444;
-            border-radius: 4px;
-            padding: 15px;
-            margin-top: 20px;
-        }
-
-        .pinned-events h3 {
-            color: #ffd700;
-            margin-bottom: 10px;
-            font-size: 14px;
-        }
-
-        .pinned-list {
-            display: flex;
-            flex-direction: column;
-            gap: 8px;
-        }
-
-        .pinned-event {
-            background: rgba(255, 215, 0, 0.1);
-            border-left: 2px solid #ffd700;
-            padding: 8px;
-            border-radius: 2px;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
-
-        .pinned-event-info {
-            flex: 1;
-        }
-
-        .pinned-event-title {
-            font-weight: bold;
-            color: #ffd700;
-            font-size: 12px;
-        }
-
-        .pinned-event-date {
-            font-size: 10px;
-            color: #888;
-        }
-
-        .unpin-btn {
-            background: transparent;
-            border: 1px solid #ff4444;
-            color: #ff4444;
-            padding: 2px 6px;
-            border-radius: 2px;
-            cursor: pointer;
-            font-size: 10px;
-            margin-left: 10px;
-        }
-
-        .unpin-btn:hover {
-            background: #ff4444;
-            color: #000;
-        }
-
-        /* Стили для разных типов событий */
-        .event-type-game {
-            border-left-color: #ff4444 !important;
-        }
-
-        .event-type-trailer {
-            border-left-color: #4444ff !important;
-        }
-
-        .event-type-teaser {
-            border-left-color: #44ff44 !important;
-        }
-
-        .event-type-announcement {
-            border-left-color: #ffaa00 !important;
-        }
-    </style>
-</head>
-<body>
-    <div class="container">
-        <!-- Панель фильтров и поиска -->
-        <div class="controls">
-            <div class="filters">
-                <button class="filter-btn active" data-filter="all">Все</button>
-                <button class="filter-btn" data-filter="game">🎮 Игры</button>
-                <button class="filter-btn" data-filter="trailer">🎥 Трейлеры</button>
-                <button class="filter-btn" data-filter="teaser">📢 Тизеры</button>
-                <button class="filter-btn" data-filter="announcement">⭐ Анонсы</button>
-            </div>
-            <div class="search">
-                <input type="text" id="searchInput" placeholder="Поиск событий...">
-            </div>
-        </div>
-
-        <!-- Киноплёнка -->
-        <div class="film-container">
-            <div class="film-perforation-top"></div>
-            <div class="film-strip" id="filmStrip">
-                <!-- Плёнка будет генерироваться через JavaScript -->
-            </div>
-            <div class="film-perforation-bottom"></div>
-        </div>
-
-        <!-- Область закрепленных событий -->
-        <div class="pinned-events" id="pinnedEvents">
-            <h3>Закреплённые события</h3>
-            <div class="pinned-list" id="pinnedList"></div>
-        </div>
+  </head>
+  <body>
+    <div id="calendar-container">
+      <h1 id="current-month-year"></h1>
+      <div id="calendar"></div>
+      <button id="prev-month">←</button>
+      <button id="next-month">→</button>
     </div>
-
+    <script src="events.json"></script>
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
