--- a/index.html
+++ b/index.html
@@ -168,6 +168,14 @@
         </section>
     </main>
 
+    <!-- Аудио элементы для атмосферы -->
+    <audio id="projectorSound" preload="auto">
+        <source src="https://assets.mixkit.co/sfx/preview/mixkit-projector-click-1253.mp3" type="audio/mpeg">
+    </audio>
+    <audio id="filmSound" preload="auto">
+        <source src="https://assets.mixkit.co/sfx/preview/mixkit-film-reel-1251.mp3" type="audio/mpeg">
+    </audio>
+
     <script src="js/script.js"></script>
 </body>
 </html>
