--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                     <div class="reel-hole"></div>
                     <div class="reel-hole"></div>
                     <div class="reel-hole"></div>
+                    <div class="reel-hole"></div>
                 </div>
             </div>
 
@@ -56,6 +57,7 @@
 
             <div class="film-reel right-reel">
                 <div class="reel-inner">
+                    <div class="reel-hole"></div>
                     <div class="reel-hole"></div>
                     <div class="reel-hole"></div>
                     <div class="reel-hole"></div>
