--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
         <div class="header-container">
             <div class="film-reel left-reel">
                 <div class="reel-inner">
+                    <div class="reel-center"></div>
+                    <div class="reel-hole"></div>
+                    <div class="reel-hole"></div>
                     <div class="reel-hole"></div>
                     <div class="reel-hole"></div>
                     <div class="reel-hole"></div>
@@ -24,10 +27,11 @@
             </div>
 
             <nav class="film-navigation">
-                <!-- Движущаяся пленка с перфорациями -->
-                <div class="film-strip">
-                    <div class="perforations-top"></div>
-                    <div class="perforations-bottom"></div>
+                <!-- Контейнер для бесконечной пленки -->
+                <div class="film-strip-container">
+                    <!-- Две одинаковые пленки для бесконечной анимации -->
+                    <div class="film-strip film-strip-1"></div>
+                    <div class="film-strip film-strip-2"></div>
                 </div>
                 
                 <!-- Статичные кнопки навигации -->
@@ -57,6 +61,9 @@
 
             <div class="film-reel right-reel">
                 <div class="reel-inner">
+                    <div class="reel-center"></div>
+                    <div class="reel-hole"></div>
+                    <div class="reel-hole"></div>
                     <div class="reel-hole"></div>
                     <div class="reel-hole"></div>
                     <div class="reel-hole"></div>
