--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
             <div class="film-reel left-reel">
                 <div class="reel-inner">
                     <div class="reel-center"></div>
+                    <div class="reel-spoke"></div>
+                    <div class="reel-spoke"></div>
+                    <div class="reel-spoke"></div>
+                    <div class="reel-spoke"></div>
+                    <div class="reel-spoke"></div>
+                    <div class="reel-spoke"></div>
                     <div class="reel-hole"></div>
                     <div class="reel-hole"></div>
                     <div class="reel-hole"></div>
@@ -27,12 +33,8 @@
             </div>
 
             <nav class="film-navigation">
-                <!-- Контейнер для бесконечной пленки -->
-                <div class="film-strip-container">
-                    <!-- Две одинаковые пленки для бесконечной анимации -->
-                    <div class="film-strip film-strip-1"></div>
-                    <div class="film-strip film-strip-2"></div>
-                </div>
+                <!-- Seamless пленка -->
+                <div class="film-strip"></div>
                 
                 <!-- Статичные кнопки навигации -->
                 <div class="nav-frames">
@@ -62,6 +64,12 @@
             <div class="film-reel right-reel">
                 <div class="reel-inner">
                     <div class="reel-center"></div>
+                    <div class="reel-spoke"></div>
+                    <div class="reel-spoke"></div>
+                    <div class="reel-spoke"></div>
+                    <div class="reel-spoke"></div>
+                    <div class="reel-spoke"></div>
+                    <div class="reel-spoke"></div>
                     <div class="reel-hole"></div>
                     <div class="reel-hole"></div>
                     <div class="reel-hole"></div>
