--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Bendy Chronicles</title>
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Cinzel:wght@400;700&display=swap" rel="stylesheet">
+    <!-- Добавляем фавиконку чтобы избежать 404 -->
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🎬</text></svg>">
 </head>
 <body>
     <!-- Кинотеатральный проектор -->
@@ -33,7 +35,7 @@
             </div>
 
             <nav class="film-navigation">
-                <!-- Seamless пленка -->
+                <!-- Пленка -->
                 <div class="film-strip"></div>
                 
                 <!-- Статичные кнопки навигации -->
