--- a/index.html
+++ b/index.html
@@ -13,22 +13,19 @@
     
     <header class="cinema-header">
         <div class="header-container">
-            <!-- Левая бобина -->
+            <!-- Левая бобина - 4 отверстия как раньше -->
             <div class="film-reel left-reel">
-                <div class="reel-outer">
-                    <div class="reel-inner">
-                        <div class="reel-center"></div>
-                        <!-- Спицы будут добавлены через CSS -->
-                    </div>
+                <div class="reel-inner">
+                    <div class="reel-hole"></div>
+                    <div class="reel-hole"></div>
+                    <div class="reel-hole"></div>
+                    <div class="reel-hole"></div>
                 </div>
             </div>
 
-            <!-- Навигация -->
             <nav class="film-navigation">
-                <!-- Пленка -->
-                <div class="film-strip">
-                    <div class="film-perforations"></div>
-                </div>
+                <!-- Пленка с перфорациями -->
+                <div class="film-strip"></div>
                 
                 <!-- Кнопки навигации -->
                 <div class="nav-frames">
@@ -55,13 +52,13 @@
                 </div>
             </nav>
 
-            <!-- Правая бобина -->
+            <!-- Правая бобина - 4 отверстия как раньше -->
             <div class="film-reel right-reel">
-                <div class="reel-outer">
-                    <div class="reel-inner">
-                        <div class="reel-center"></div>
-                        <!-- Спицы будут добавлены через CSS -->
-                    </div>
+                <div class="reel-inner">
+                    <div class="reel-hole"></div>
+                    <div class="reel-hole"></div>
+                    <div class="reel-hole"></div>
+                    <div class="reel-hole"></div>
                 </div>
             </div>
 
@@ -69,6 +66,7 @@
         </div>
     </header>
 
+    <!-- Остальной контент без изменений -->
     <main class="cinema-content">
         <section id="home" class="cinema-page active">
             <div class="page-content">
