--- a/index.html
+++ b/index.html
@@ -13,13 +13,21 @@
     
     <header class="cinema-header">
         <div class="header-container">
-            <!-- Левая бобина - 4 отверстия как раньше -->
+            <!-- Левая бобина - 6 отверстий со спицами -->
             <div class="film-reel left-reel">
-                <div class="reel-inner">
+                <div class="reel-inner reel-outer">
                     <div class="reel-hole"></div>
                     <div class="reel-hole"></div>
                     <div class="reel-hole"></div>
                     <div class="reel-hole"></div>
+                    <div class="reel-hole"></div>
+                    <div class="reel-hole"></div>
+                    <div class="reel-spoke"></div>
+                    <div class="reel-spoke"></div>
+                    <div class="reel-spoke"></div>
+                    <div class="reel-spoke"></div>
+                    <div class="reel-spoke"></div>
+                    <div class="reel-spoke"></div>
                 </div>
             </div>
 
@@ -52,13 +60,21 @@
                 </div>
             </nav>
 
-            <!-- Правая бобина - 4 отверстия как раньше -->
+            <!-- Правая бобина - 6 отверстий со спицами -->
             <div class="film-reel right-reel">
-                <div class="reel-inner">
+                <div class="reel-inner reel-outer">
                     <div class="reel-hole"></div>
                     <div class="reel-hole"></div>
                     <div class="reel-hole"></div>
                     <div class="reel-hole"></div>
+                    <div class="reel-hole"></div>
+                    <div class="reel-hole"></div>
+                    <div class="reel-spoke"></div>
+                    <div class="reel-spoke"></div>
+                    <div class="reel-spoke"></div>
+                    <div class="reel-spoke"></div>
+                    <div class="reel-spoke"></div>
+                    <div class="reel-spoke"></div>
                 </div>
             </div>
 
@@ -66,7 +82,6 @@
         </div>
     </header>
 
-    <!-- Остальной контент без изменений -->
     <main class="cinema-content">
         <section id="home" class="cinema-page active">
             <div class="page-content">
