--- a/index.html
+++ b/index.html
@@ -13,21 +13,22 @@
     
     <header class="cinema-header">
         <div class="header-container">
-            <!-- Левая бобина - 6 отверстий со спицами -->
+            <!-- Левая бобина - классическая конструкция -->
             <div class="film-reel left-reel">
-                <div class="reel-inner reel-outer">
-                    <div class="reel-hole"></div>
-                    <div class="reel-hole"></div>
-                    <div class="reel-hole"></div>
-                    <div class="reel-hole"></div>
-                    <div class="reel-hole"></div>
-                    <div class="reel-hole"></div>
+                <div class="reel-outer">
+                    <div class="reel-center-hole"></div>
                     <div class="reel-spoke"></div>
                     <div class="reel-spoke"></div>
                     <div class="reel-spoke"></div>
                     <div class="reel-spoke"></div>
                     <div class="reel-spoke"></div>
                     <div class="reel-spoke"></div>
+                    <div class="reel-hole"></div>
+                    <div class="reel-hole"></div>
+                    <div class="reel-hole"></div>
+                    <div class="reel-hole"></div>
+                    <div class="reel-hole"></div>
+                    <div class="reel-hole"></div>
                 </div>
             </div>
 
@@ -60,21 +61,22 @@
                 </div>
             </nav>
 
-            <!-- Правая бобина - 6 отверстий со спицами -->
+            <!-- Правая бобина - классическая конструкция -->
             <div class="film-reel right-reel">
-                <div class="reel-inner reel-outer">
-                    <div class="reel-hole"></div>
-                    <div class="reel-hole"></div>
-                    <div class="reel-hole"></div>
-                    <div class="reel-hole"></div>
-                    <div class="reel-hole"></div>
-                    <div class="reel-hole"></div>
+                <div class="reel-outer">
+                    <div class="reel-center-hole"></div>
                     <div class="reel-spoke"></div>
                     <div class="reel-spoke"></div>
                     <div class="reel-spoke"></div>
                     <div class="reel-spoke"></div>
                     <div class="reel-spoke"></div>
                     <div class="reel-spoke"></div>
+                    <div class="reel-hole"></div>
+                    <div class="reel-hole"></div>
+                    <div class="reel-hole"></div>
+                    <div class="reel-hole"></div>
+                    <div class="reel-hole"></div>
+                    <div class="reel-hole"></div>
                 </div>
             </div>
 
