--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
     
     <header class="cinema-header">
         <div class="header-container">
-            <!-- Левая бобина - классическая конструкция -->
+            <!-- Левая бобина - новый дизайн -->
             <div class="film-reel left-reel">
                 <div class="reel-outer">
-                    <div class="reel-center-hole"></div>
+                    <div class="reel-rim"></div>
+                    <div class="reel-center-hub"></div>
                     <div class="reel-spoke"></div>
                     <div class="reel-spoke"></div>
                     <div class="reel-spoke"></div>
@@ -29,14 +30,15 @@
                     <div class="reel-hole"></div>
                     <div class="reel-hole"></div>
                     <div class="reel-hole"></div>
+                    <div class="reel-detail-1"></div>
+                    <div class="reel-detail-2"></div>
+                    <div class="reel-detail-3"></div>
                 </div>
+                <div class="reel-shadow"></div>
             </div>
 
             <nav class="film-navigation">
-                <!-- Пленка с перфорациями -->
                 <div class="film-strip"></div>
-                
-                <!-- Кнопки навигации -->
                 <div class="nav-frames">
                     <a href="#home" class="frame-cell active" data-page="home">
                         <span class="frame-number">01</span>
@@ -61,10 +63,11 @@
                 </div>
             </nav>
 
-            <!-- Правая бобина - классическая конструкция -->
+            <!-- Правая бобина - новый дизайн -->
             <div class="film-reel right-reel">
                 <div class="reel-outer">
-                    <div class="reel-center-hole"></div>
+                    <div class="reel-rim"></div>
+                    <div class="reel-center-hub"></div>
                     <div class="reel-spoke"></div>
                     <div class="reel-spoke"></div>
                     <div class="reel-spoke"></div>
@@ -77,13 +80,18 @@
                     <div class="reel-hole"></div>
                     <div class="reel-hole"></div>
                     <div class="reel-hole"></div>
+                    <div class="reel-detail-1"></div>
+                    <div class="reel-detail-2"></div>
+                    <div class="reel-detail-3"></div>
                 </div>
+                <div class="reel-shadow"></div>
             </div>
 
             <div class="projector-light"></div>
         </div>
     </header>
 
+    <!-- Остальной контент без изменений -->
     <main class="cinema-content">
         <section id="home" class="cinema-page active">
             <div class="page-content">
