--- a/index.html
+++ b/index.html
@@ -13,11 +13,10 @@
     
     <header class="cinema-header">
         <div class="header-container">
-            <!-- Левая бобина - новый дизайн -->
+            <!-- Левая бобина - упрощенная -->
             <div class="film-reel left-reel">
                 <div class="reel-outer">
-                    <div class="reel-rim"></div>
-                    <div class="reel-center-hub"></div>
+                    <div class="reel-center"></div>
                     <div class="reel-spoke"></div>
                     <div class="reel-spoke"></div>
                     <div class="reel-spoke"></div>
@@ -30,11 +29,7 @@
                     <div class="reel-hole"></div>
                     <div class="reel-hole"></div>
                     <div class="reel-hole"></div>
-                    <div class="reel-detail-1"></div>
-                    <div class="reel-detail-2"></div>
-                    <div class="reel-detail-3"></div>
                 </div>
-                <div class="reel-shadow"></div>
             </div>
 
             <nav class="film-navigation">
@@ -63,11 +58,10 @@
                 </div>
             </nav>
 
-            <!-- Правая бобина - новый дизайн -->
+            <!-- Правая бобина - упрощенная -->
             <div class="film-reel right-reel">
                 <div class="reel-outer">
-                    <div class="reel-rim"></div>
-                    <div class="reel-center-hub"></div>
+                    <div class="reel-center"></div>
                     <div class="reel-spoke"></div>
                     <div class="reel-spoke"></div>
                     <div class="reel-spoke"></div>
@@ -80,18 +74,13 @@
                     <div class="reel-hole"></div>
                     <div class="reel-hole"></div>
                     <div class="reel-hole"></div>
-                    <div class="reel-detail-1"></div>
-                    <div class="reel-detail-2"></div>
-                    <div class="reel-detail-3"></div>
                 </div>
-                <div class="reel-shadow"></div>
             </div>
 
             <div class="projector-light"></div>
         </div>
     </header>
 
-    <!-- Остальной контент без изменений -->
     <main class="cinema-content">
         <section id="home" class="cinema-page active">
             <div class="page-content">
