--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     
     <header class="cinema-header">
         <div class="header-container">
-            <!-- Левая бобина - упрощенная -->
+            <!-- Левая бобина -->
             <div class="film-reel left-reel">
                 <div class="reel-outer">
                     <div class="reel-center"></div>
@@ -58,7 +58,7 @@
                 </div>
             </nav>
 
-            <!-- Правая бобина - упрощенная -->
+            <!-- Правая бобина -->
             <div class="film-reel right-reel">
                 <div class="reel-outer">
                     <div class="reel-center"></div>
